<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DialogFragmentRate">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/califica_la_rutina"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RatingBar
            android:id="@+id/ratingBarRut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/confirmRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/our_blue"
            android:text="@string/aceptar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBarRut" />

        <Button
            android:id="@+id/cancelRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/grey"
            android:text="@string/salir"
            app:layout_constraintBaseline_toBaselineOf="@+id/confirmRate"
            app:layout_constraintEnd_toStartOf="@+id/confirmRate" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>