<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".FirstFragment">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="364dp"
                android:layout_height="215dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="228dp"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/image_reps_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.538"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/reps_logo" />

            <Button
                android:id="@+id/first_button_login"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="152dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="104dp"
                android:backgroundTint="#09B5EB"
                android:text="@string/first_button_text_login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/first_button_register"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <Button
                android:id="@+id/first_button_register"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="152dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="104dp"
                android:backgroundTint="#2B7CCD"
                android:text="@string/first_button_text_registrarse"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/first_button_login"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>

</FrameLayout>