<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/verification_code_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerificationCode">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="209dp"
            android:layout_height="123dp"
            android:layout_marginTop="168dp"
            android:src="@drawable/reps_logo_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.549"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/verificationCode"
            android:layout_width="306dp"
            android:layout_height="55dp"
            android:layout_marginTop="60dp"
            android:hint="@string/verification_code_text"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <Button
            android:id="@+id/reenviarCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/grey"
            android:text="@string/resend_code"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/confirmCode"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/verificationCode" />

        <Button
            android:id="@+id/confirmCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/our_blue"
            android:text="@string/confirm_code"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/reenviarCode"
            app:layout_constraintTop_toTopOf="@+id/reenviarCode" />

        <ProgressBar
            android:id="@+id/progressBarCode"
            style="?android:attr/progressBarStyle"
            android:layout_width="80dp"
            android:layout_height="62dp"
            android:layout_marginTop="32dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reenviarCode" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>