<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ejecucionRut.ejecucionRut">

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="233dp"
        android:layout_height="43dp"
        android:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/reps_logo" />

    <Button
        android:id="@+id/next_ex"
        android:layout_width="312dp"
        android:layout_height="41dp"
        android:layout_marginBottom="100dp"
        android:background="@color/grey"
        android:backgroundTint="@color/grey"
        android:text="@string/next_ex"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="104dp"
        android:layout_height="110dp"
        android:layout_marginTop="236dp"
        app:cornerRadius="50dp"
        app:icon="@android:drawable/ic_media_play"
        app:iconPadding="0dp"
        app:iconSize="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre_ejercicio" />

    <TextView
        android:id="@+id/nombreCiclo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nombre_ciclo"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreCiclo" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="109dp"
        android:layout_height="102dp"
        android:layout_marginTop="108dp"
        android:clickable="true"
        app:backgroundTint="@color/our_light_blue"
        app:fabSize="auto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre_ejercicio"
        app:rippleColor="@color/white"
        app:srcCompat="@android:drawable/ic_media_play" />

    <TextView
        android:id="@+id/nombre_ejercicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="113dp" />

    <TextView
        android:id="@+id/siguiente_ej"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/siguiente_ej"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/next_ex"
        app:layout_constraintStart_toStartOf="@+id/next_ex" />

    <TextView
        android:id="@+id/ex_time"
        android:layout_width="67dp"
        android:layout_height="25dp"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="188dp" />

</androidx.constraintlayout.widget.ConstraintLayout>