<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.reps.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action

            android:id="@+id/action_navigation_home_to_vista_rutina"
            app:destination="@id/vista_rutina" />
        <action

            android:id="@+id/action_navigation_home_to_fragment_full_section"
            app:destination="@id/fragment_full_section" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favoritos"
        android:name="com.example.reps.ui.favoritos.FavoritosFragment"
        android:label="@string/title_favoritos"
        tools:layout="@layout/fragment_favoritos" >
        <action
            android:id="@+id/action_navigation_favoritos_to_vista_rutina"
            app:destination="@id/vista_rutina" />
    </fragment>

    <fragment
        android:id="@+id/navigation_descubrir"
        android:name="com.example.reps.ui.notifications.DescubrirFragment"
        android:label="@string/title_descubrir"
        tools:layout="@layout/fragment_descubrir" >
        <action
            android:id="@+id/action_navigation_descubrir_to_vista_rutina"
            app:destination="@id/vista_rutina" />
    </fragment>
    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.example.reps.ui.perfil.PerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" >
        <action
            android:id="@+id/action_navigation_perfil_to_editProfileFragment2"
            app:destination="@id/editProfileFragment" />
        <action
            android:id="@+id/action_navigation_perfil_to_mainActivity"
            app:destination="@id/mainActivity" />
        <action
            android:id="@+id/action_navigation_perfil_to_miProgresoFragment"
            app:destination="@id/miProgresoFragment" />
        <action
            android:id="@+id/action_navigation_perfil_to_programarEntrenamientoFragment"
            app:destination="@id/programarEntrenamientoFragment" />
    </fragment>
    <fragment
        android:id="@+id/vista_rutina"
        android:name="com.example.reps.VistaRutina"
        android:label="fragment_vista_rutina"
        tools:layout="@layout/fragment_vista_rutina">
    <argument
        android:name="ID_rutina"
        app:argType="integer" />
        <action
            android:id="@+id/action_vista_rutina_to_ejecucionRut"
            app:destination="@id/ejecucionRut" />
        <argument
            android:name="isFav"
            app:argType="boolean" />
    </fragment>

    <fragment

        android:id="@+id/fragment_full_section"
        android:name="com.example.reps.FullSection"
        android:label="fragment_full_section"
        tools:layout="@layout/fragment_full_section">
        <argument
            android:name="SectionTitle"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.example.reps.ui.perfil.EditProfileFragment"
        android:label="fragment_edit_profile"
        tools:layout="@layout/fragment_edit_profile">
        <action
            android:id="@+id/action_editProfileFragment_to_navigation_perfil"
            app:destination="@id/navigation_perfil" />
    </fragment>
    <activity
        android:id="@+id/mainActivity"
        android:name="com.example.reps.MainActivity"
        android:label="activity_main"
        tools:layout="@layout/activity_main" />
    <fragment
        android:id="@+id/miProgresoFragment"
        android:name="com.example.reps.ui.perfil.MiProgresoFragment"
        android:label="fragment_mi_progreso"
        tools:layout="@layout/fragment_mi_progreso" />
    <fragment
        android:id="@+id/programarEntrenamientoFragment"
        android:name="com.example.reps.ui.perfil.ProgramarEntrenamientoFragment"
        android:label="fragment_programar_entrenamiento"
        tools:layout="@layout/fragment_programar_entrenamiento" >
        <action
            android:id="@+id/action_programarEntrenamientoFragment_to_navigation_perfil"
            app:destination="@id/navigation_perfil" />
    </fragment>
    <activity
        android:id="@+id/ejecucionRut"
        android:name="com.example.reps.ui.ejecucionRut.ejecucionRut"
        android:label="activity_ejecucion_rut"
        tools:layout="@layout/activity_ejecucion_rut" >
        <argument
            android:name="idRut"
            app:argType="integer" />
    </activity>

</navigation>